# oocr

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docs.yml
configs/datasets-configs/: custom.yaml  iam.yaml  mnist.yaml  sroie.yaml
data/generation/data/: download_text_dataset.py
data/generation/languages/: __init__.py  en.py  ro.py
docs/: conf.py  index.rst
docs/api/: dataset.rst
docs/guides/: quickstart.rst
docs/source/: conf.py  index.rst
docs/source/api/cli/: cli.rst
docs/source/api/core/: core.rst
docs/source/api/data/: augmentation.rst  datasets.rst  processing.rst
docs/source/api/models/: models.rst
oocr/: inference.py  models.py  train.py  util.py
oocr/cli/: inference.py  training.py
oocr/data/datasets/: dataset.py
oocr/generation/: generator.py
oocr/models/: models.py
oocr/utils/: util.py
tests/: conftest.py
tests/integration/: test_inference.py
